--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -115,71 +115,6 @@
     color: #ff55a5;
 }
 
-.header__dropdown {
-    position: relative;
-    display: block;
-    width: 100%;
-}
-
-.header__dropdown-menu {
-    position: absolute;
-    background-color: #2b2b31;
-    padding: 15px 20px;
-    display: block;
-    width: 100%;
-    min-width: 200px;
-    text-align: left;
-    z-index: -1;
-    pointer-events: none;
-    opacity: 0;
-    -webkit-box-shadow: 0 5px 25px 0 rgba(0, 0, 0, 0.3);
-    box-shadow: 0 5px 25px 0 rgba(0, 0, 0, 0.3);
-    -webkit-transition: 0.4s ease;
-    -moz-transition: 0.4s ease;
-    transition: 0.4s ease;
-    margin-top: 0;
-    top: 100%;
-}
-
-.header__dropdown-menu:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 2px;
-    display: block;
-    background-image: -moz-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
-    background-image: -webkit-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
-    background-image: -ms-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
-    background-image: linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
-    -webkit-box-shadow: 0 0 20px 0 rgba(255, 88, 96, 0.5);
-    box-shadow: 0 0 20px 0 rgba(255, 88, 96, 0.5);
-}
-
-.header__dropdown-menu li {
-    padding: 0;
-}
-
-.header__dropdown-menu a {
-    font-size: 16px;
-    color: rgba(255, 255, 255, 0.75);
-    line-height: 40px;
-    display: block;
-    font-weight: 300;
-}
-
-.header__dropdown-menu a:hover {
-    color: #ff55a5;
-}
-
-.header__dropdown-menu.show {
-    z-index: 1000;
-    pointer-events: auto;
-    opacity: 1;
-    margin-top: 10px;
-}
-
 .header__wrap {
     position: relative;
     background-color: #2b2b31;
@@ -282,42 +217,12 @@
     color: rgba(255, 255, 255, 0.75);
     background: transparent;
     font-size: 26px;
+    font-weight: 700;
 }
 
 .header__search-btn:hover,
 .header__search-btn.active {
     color: #fff;
-}
-
-.header__sign-in {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 40px;
-    width: 40px;
-    -webkit-border-radius: 4px;
-    border-radius: 4px;
-    background-image: -moz-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
-    background-image: -webkit-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
-    background-image: -ms-linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
-    background-image: linear-gradient(90deg, #ff55a5 0%, #ff5860 100%);
-    -webkit-box-shadow: 0 0 20px 0 rgba(255, 88, 96, 0.5);
-    box-shadow: 0 0 20px 0 rgba(255, 88, 96, 0.5);
-    opacity: 0.85;
-    margin-left: 20px;
-}
-
-.header__sign-in span {
-    display: none;
-}
-
-.header__sign-in i {
-    color: #fff;
-    font-size: 24px;
-}
-
-.header__sign-in:hover {
-    opacity: 1;
 }
 
 .header__btn {
@@ -413,22 +318,6 @@
     .header__search-btn {
         font-size: 30px;
     }
-    .header__sign-in {
-        height: 50px;
-        width: 140px;
-        margin-left: 30px;
-    }
-    .header__sign-in i {
-        display: none;
-    }
-    .header__sign-in span {
-        display: block;
-        font-size: 13px;
-        color: #fff;
-        text-transform: uppercase;
-        font-weight: 500;
-        letter-spacing: 1px;
-    }
     .header__nav {
         top: 90px;
     }
@@ -441,9 +330,6 @@
 }
 
 @media (min-width: 1200px) {
-    .header__sign-in {
-        margin-left: 45px;
-    }
     .header__auth {
         margin-right: 0;
     }
